Fixed yarn